...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      backgroundColor: backgroundColor,
      body: _widgetOptions.elementAt(_selectedIndex),
      bottomNavigationBar: BottomNavigationBar(
        backgroundColor: mainColor,
        selectedItemColor: backgroundColor,
        iconSize: !tablet
            ? MediaQuery.sizeOf(context).height * 0.03
            : MediaQuery.sizeOf(context).height * 0.032,
        items: const <BottomNavigationBarItem>[
          BottomNavigationBarItem(
            icon: Icon(key: Key('search'), Icons.search),
            label: 'Search',
          ),
          BottomNavigationBarItem(
            icon: Icon(key: Key('profile'), Icons.person),
            label: 'Profile',
          ),
          BottomNavigationBarItem(
            icon: Icon(key: Key('chat'), Icons.chat),
            label: 'Chat',
          ),
        ],
        currentIndex: _selectedIndex,
        onTap: _onItemTapped,
      ),
...
    return Scaffold(
        key: _scaffoldKey,
        appBar: AppBar(
          backgroundColor: mainColor,
          actions: <Widget>[
            IconButton(
              key: Key('settings'),
              icon: Icon(Icons.settings, color: backgroundColor),
              onPressed: () async {
                if (!tablet) {
                  Navigator.push(
                    context,
                    MaterialPageRoute(
                      builder: (context) => FormHouseFilter(
                          key: Key('formHouseFilters'),
                          uidHouse: house.idHouse),
                    ),
                  );
                } else {
                  setState(() {
                    choice.value = 1;
...
                  _scaffoldKey.currentState?.openEndDrawer();
                }
              },
            ),
            Align(
              child: badges.Badge(
                key: Key('notifiesBadge'),
                showBadge: (house.numberNotifies != 0),
                badgeContent: Text(
                  house.numberNotifies.toString(),
                  style: GoogleFonts.plusJakartaSans(color: backgroundColor),
                ),
                position: badges.BadgePosition.topEnd(top: 10, end: 10),
                badgeStyle: BadgeStyle(
                    padding: const EdgeInsets.all(4), badgeColor: errorColor),
                child: IconButton(
                  key: Key('notifiesIcon'),
                  icon: Icon(
                    Icons.notifications,
                    size: !tablet
                        ? MediaQuery.sizeOf(context).height * 0.03
                        : MediaQuery.sizeOf(context).height * 0.032,
                  ),
...
                    if (mounted) {
                      if (!tablet) {
                        Navigator.push(
                          context,
                          MaterialPageRoute(
                            builder: (context) => NotificationLayout(
                                key: Key('notifsPage'), house: house),
                          ),
                        );
                      } else {
                        setState(() {
                          choice.value = 2;
                        });
...
      appBar: AppBar(
        backgroundColor: mainColor,
      ),
      body: Column(mainAxisSize: MainAxisSize.max, children: [
        Expanded(
            child: SingleChildScrollView(
                key: Key('scrollable'),
                child: Column(
                  mainAxisSize: MainAxisSize.max,
                  crossAxisAlignment: CrossAxisAlignment.start,
                  children: [
                    const DetailedHouseProfile(key: Key('detailedProfile')),
                    const SizedBox(
...
                    Align(
                      alignment: const AlignmentDirectional(0, 0),
                      child: Padding(
                        padding:
                            const EdgeInsetsDirectional.fromSTEB(0, 0, 0, 16),
                        child: ElevatedButton(
                          key: Key('modifyButton'),
                          onPressed: () {
                            Navigator.push(
                                context,
                                MaterialPageRoute(
                                    builder: (context) => ModifyHouseProfile(
                                        key: Key('modifyHouseProfile'),
                                        house: house)));
                          },
                          style: ElevatedButton.styleFrom(
                            fixedSize: const Size(230, 52),
                            backgroundColor: mainColor,
                            elevation: 3.0,
...
    final image = Icon(Icons.abc);
    final name = "testName";
    final surname = "testName";
    final idPerson = "idtest";

    return InkWell(
      key: Key('chatsInkWell'),
      splashColor: Colors.transparent,
      focusColor: Colors.transparent,
      hoverColor: Colors.transparent,
      highlightColor: Colors.transparent,
      onTap: () async {
        {
          if (!tablet) {
            Navigator.push(
              context,
              MaterialPageRoute(
                builder: (context) => ChatPage(
                  key: Key('chatPage'),
                  senderUserID: house.idHouse,
                  nameReciver: "$name $surname",
                  receiverUserID: idPerson,
                ),
              ),
            );
...
              offset: Offset(0, 2),
            )
          ],
          borderRadius: BorderRadius.circular(8),
        ),
        child: InkWell(
          key: Key('matchesInkWell'),
          splashColor: Colors.transparent,
          focusColor: Colors.transparent,
          hoverColor: Colors.transparent,
          highlightColor: Colors.transparent,
          onTap: () {
            if (!tablet) {
              Navigator.push(
                context,
                MaterialPageRoute(
                  builder: (context) => ChatPage(
                    key: Key('matchChatPage'),
                    senderUserID: house.idHouse,
                    nameReciver: "$name $surname",
                    receiverUserID: idPerson,
                  ),
                ),
              );
...
