...
                    fontWeight: FontWeight.w600,
                    fontSize: size32(context),
                  ),
                ),
                actions: <Widget>[
                  TextButton.icon(
                      key: const Key('registerButton'),
                      onPressed: () {
                        widget.toggleView();
                      },
                      icon: Icon(
                        Icons.person,
                        color: backgroundColor,
...
                                child: Column(
                                    mainAxisSize: MainAxisSize.max,
                                    crossAxisAlignment:
                                        CrossAxisAlignment.start,
                                    children: [
                                      Text(
                                        key: const Key('signInText'),
                                        'Sign in with your account',
                                        textAlign: TextAlign.start,
                                        style: TextStyle(
                                          fontFamily: 'Plus Jakarta Sans',
                                          color: const Color(0xFF101213),
                                          fontSize: size32(context),
...
                                      Padding(
                                        padding: const EdgeInsetsDirectional
                                            .fromSTEB(0, 0, 0, 16),
                                        child: SizedBox(
                                          width: double.infinity,
                                          child: TextFormField(
                                              key: const Key('emailField'),
                                              decoration: InputDecoration(
                                                labelText: 'Email',
                                                labelStyle: TextStyle(
                                                  fontFamily:
                                                      'Plus Jakarta Sans',
                                                  color:
...
                                      Padding(
                                        padding: const EdgeInsetsDirectional
                                            .fromSTEB(0, 0, 0, 16),
                                        child: SizedBox(
                                          width: double.infinity,
                                          child: TextFormField(
                                              key: const Key('pwdField'),
                                              autofillHints: const [
                                                AutofillHints.password
                                              ],
                                              obscureText:
                                                  !_model.passwordVisibility,
                                              decoration: InputDecoration(
...
                                        alignment:
                                            const AlignmentDirectional(0, 0),
                                        child: Padding(
                                          padding: const EdgeInsetsDirectional
                                              .fromSTEB(0, 0, 0, 16),
                                          child: ElevatedButton(
                                            key: const Key('loginButton'),
                                            onPressed: () async {
                                              if (_scaffoldKey.currentState!
                                                  .validate()) {
                                                setState(() => loading = true);
                                                dynamic result =
                                                    signIn(email, password);
...
          );
  }

  signIn(String email, String password) async {
    Navigator.push(
      context,
      MaterialPageRoute(builder: (context) => Homepage(key: Key('home'))),
    );
  }
}

